--- a/SASS/SASS_NODE/sass/parciales/_extras.scss
+++ b/SASS/SASS_NODE/sass/parciales/_extras.scss
@@ -70,7 +70,6 @@
 }
 /*Extras Review*/
 .menu {
-    width: 100vw;
     background-color: $blanco;
     text-align: center;
     &__header {
